syntax = "proto3";

package client;

// 공통 요청 메시지 구조
message C2S_MetaData {
  string userId = 1;         // 유저 ID (UUID, 16바이트)
  string clientVersion = 2;  // 클라이언트 버전 (문자열)
}

// 최초 패킷 구조
message C2S_InitialPacket {
    common.C2S_MetaData meta = 1;
    string deviceId = 2;
}